# Map-Routing

./: .gitignore  CMakeLists.txt  README.md  bootstrap_and_build.bat  build.ps1  full_build.bat  route.ps1  setup.ps1  start_server.bat  vcpkg.json
include/: alt.hpp  astar.hpp  bidirectional_astar.hpp  ch.hpp  dijkstra.hpp  geo.hpp  geojson.hpp  graph.hpp  hub_labeling.hpp  osm_parser.hpp  types.hpp
src/: alt.cpp  astar.cpp  bidirectional_astar.cpp  ch.cpp  dijkstra.cpp  geojson.cpp  graph.cpp  hub_labeling.cpp  osm_parser.cpp
tests/: test_ch.cpp  test_graph.cpp  test_parser.cpp  test_routing.cpp
tools/: main.cpp
web/: app.js  index.html  style.css
